[package]
name = "pallet-beefy-mmr"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "BEEFY + MMR runtime utilities"

[dependencies]
hex = { version = "0.4", optional = true }
codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
libsecp256k1 = { version = "0.6.0", default-features = false }
log = { version = "0.4.13", default-features = false }
scale-info = { version = "0.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.127", optional = true }

frame-support = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
frame-system = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
pallet-mmr = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
pallet-mmr-primitives = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
pallet-session = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-io = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }
sp-std = { git = "https://github.com/purestake/substrate", default-features = false, branch = "crystalin-v0.9.9-block-response-length" }

beefy-merkle-tree = { path = "../beefy-merkle-tree", default-features = false }
beefy-primitives = { path = "../beefy-primitives", default-features = false }
pallet-beefy = { path = "../beefy-pallet", default-features = false }

[dev-dependencies]
sp-staking = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }
hex = "0.4"
hex-literal = "0.3"

[features]
default = ["std"]
std = [
    "beefy-merkle-tree/std",
    "beefy-primitives/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "hex",
    "libsecp256k1/std",
    "log/std",
    "pallet-beefy/std",
    "pallet-mmr-primitives/std",
    "pallet-mmr/std",
    "pallet-session/std",
    "serde",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
