[package]
name = "beefy-test"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }

sc-block-builder = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }
sc-network = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }

substrate-test-runtime-client = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }
substrate-test-runtime = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }

beefy-gadget = { path = "../beefy-gadget" }
beefy-primitives = { path = "../beefy-primitives" }

async-std = { version = "1.9" }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
futures-core = { version = "0.3" }
log = { version = "0.4" }
parking_lot = { version = "0.11" }
rand = { version = "0.8" }
strum = { version = "0.21", features = ["derive"] }

[dev-dependencies]
sp-tracing = { git = "https://github.com/purestake/substrate.git", branch = "crystalin-v0.9.9-block-response-length" }
