[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
homepage = "https://substrate.dev"
license = "Unlicense"
name = "beefy-node"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "2.0.0"

[[bin]]
name = "beefy-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

[dependencies]
jsonrpc-core = "15.0.0"
structopt = "0.3.22"

# local dependencies
beefy-primitives = { version = "0.1.0", path = "../../beefy-primitives" }
beefy-gadget = { version = "0.1.0", path = "../../beefy-gadget" }
beefy-gadget-rpc = { version = "0.1.0", path = "../../beefy-gadget/rpc" }
beefy-node-runtime = { path = "../runtime", version = "2.0.0" }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
frame-benchmarking-cli = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

sc-basic-authorship = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-cli = { git = "https://github.com/purestake/substrate", features = ["wasmtime"], branch = "crystalin-v0.9.9-block-response-length" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus-aura = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-executor = { git = "https://github.com/purestake/substrate", features = ["wasmtime"], branch = "crystalin-v0.9.9-block-response-length" }
sc-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-rpc-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-service = { git = "https://github.com/purestake/substrate", features = ["wasmtime"], branch = "crystalin-v0.9.9-block-response-length" }
sc-telemetry = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-transaction-pool-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

sp-api = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-consensus = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-consensus-aura = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-finality-grandpa = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

substrate-frame-rpc-system = { git = "https://github.com/purestake/substrate", branch = "crystalin-v0.9.9-block-response-length" }

[features]
default = []
runtime-benchmarks = []
